RESOLVED FIXED226952
REGRESSION: MSE: Netflix playback sometimes fails when going to "next episode" in series
https://bugs.webkit.org/show_bug.cgi?id=226952
Summary REGRESSION: MSE: Netflix playback sometimes fails when going to "next episode...
Jean-Yves Avenard [:jya]
Reported 2021-06-12 08:15:16 PDT
REGRESSION: MSE: Netflix playback sometimes fails when going to "next episode" in series
Attachments
Patch (12.34 KB, patch)
2021-06-15 00:46 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-06-12 08:15:56 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-06-15 00:46:09 PDT
EWS
Comment 3 2021-06-15 18:02:00 PDT
Committed r278917 (238848@main): <https://commits.webkit.org/238848@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431410 [details].
Note You need to log in before you can comment on or make changes to this bug.